app/assets/stylesheets/navigation.scss
/* Slides out from left, all cool-like. */
div.mobile-navbar {
  position:                  fixed;
  top:                       0;
  left:                      0;
  width:                     160px;
  height:                    100%;
  padding:                   15px;
  background-color:          white;
  box-shadow:                0px 2px 4px 0px rgba(0,0,0,0.50);
  transform:                 translateX(-101%); // 101 will hide the shadow, too
  transition:                transform 100ms;

  &.is-active {
    transform:               translateX(0);
  }

  h1 {
    margin:                  0;
    margin-top:              -($font-size-h1*0.6)
  }

  ul {
    list-style:              none;
    padding-left:            0;
  }

  li {
    $vert-padding:         15px;
    padding-top:           $vert-padding;
    padding-bottom:        $vert-padding;
    border-bottom:         1px solid $hp-gray-lighter;
    overflow-x:            hidden;
    font-size:             $font-size-h4;

    /* this is an implementation of the table-of-contents style periods */
    span {
      display:             block; // we're forcing it to overflow instead of wrap
      width:               200%;
    }
  }
}

